# bear-query

./: CLAUDE.md  Cargo.toml  DOCUMENTATION.md  LICENSE.MD  README.md  SCHEMA.md  SCHEMA_CHANGES.md
.github/workflows/: ci.yml  release.yml
examples/: null_analysis.rs  query_demo.rs
src/: dataframe.rs  lib.rs  main.rs  models.rs  schema.rs
