[package]
name = "bear-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Removed unused dependencies: config, dotenvy, uuid
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3.44", features = ["serde"] }
polars = { version = "0.52", default-features = false, features = ["dtype-full", "temporal", "fmt"] }
