[package]
name = "bear-query"
version = "0.0.3"
edition = "2024"
description = "A read-only Rust library for querying the Bear note-taking app's SQLite database with minimal interference"
readme = "README.md"
license = "Parity-7.0.0"
repository = "https://github.com/jakeswenson/bear-query"
keywords = ["bear", "notes"]
categories = ["text-processing"]

[dependencies]
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3.44", features = ["serde"] }
polars = { version = "0.52", default-features = false, features = ["dtype-full", "temporal", "fmt"] }
